# jirakit

./: .env.example  .gitignore  CHANGELOG.md  LICENCE.txt  MANIFEST.in  MIGRATION_REPORT.json  MIGRATION_REPORT.md  README.md  module.txt  pyproject.toml  requirements-test.txt  requirements.txt
docs/: README.md
docs/api-reference/: README.md
docs/examples/: README.md  help-desk-template.yaml  simple-task-tracker.yaml
docs/guides/: quick-reference.md  rollback-recovery.md  template-deployment.md  template-structure.md
docs/jira_api/: swagger-v3.v3.txt
docs/releases/: README.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.6.md  v0.1.7.md
scripts/: bump-version.sh
src/jirakit/: __init__.py  _full_name.txt  _metadata.yaml
src/jirakit/fields/: __init__.py  text_area.py
src/jirakit/groups/: __init__.py
src/jirakit/issues/: __init__.py  types.py
src/jirakit/projects/: __init__.py  tracking.py
src/jirakit/screens/: __init__.py
src/jirakit/workflows/: __init__.py  statuses.py
tests/: README.md  __init__.py  conftest.py  index.md  test_client.py  test_fields.py  test_groups.py  test_import.py  test_issue_types.py  test_issues.py  test_projects.py  test_screens.py  test_text_area.py  test_tracking.py  test_workflows.py
