[project]
name = "jirakit"
description = "Template-based Jira Cloud project deployment and management over the REST API v3"
keywords = [
    "jira",
    "jira-cloud",
    "atlassian",
    "adf",
    "project-deployment",
    "workflows",
    "templates",
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENCE.txt"]
readme = "README.md"
authors = [
    {name = "Cognisn", email = "matthew@cognisn.com"},
]
maintainers = [
    {name = "Cognisn", email = "matthew@cognisn.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/Cognisn/jirakit"
Repository = "https://github.com/Cognisn/jirakit"
Documentation = "https://github.com/Cognisn/jirakit"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs", "samples"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["src/jirakit/_version.txt"]}
